--- a/mattbabel.com/public_html/index.html
+++ b/mattbabel.com/public_html/index.html
@@ -11,241 +11,59 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
-    <script src="/static/js/mobile-menu.js"></script>
+    <script src="/static/js/load-common-html.js"></script>
+    <script src="/static/js/typewriter-anim.js"></script>
+    <script src="/static/js/scroll-listener.js"></script>
+    <script src="/static/js/contact-submit.js"></script>
+    <script src="/static/js/prevent-url-change.js"></script>
 
+    <link rel="shortcut icon" href="favicon.ico" /> 
     <link rel="stylesheet" href="/static/scripts/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
+
 </head>
 
 <body class="site">
-    <header>
-
-        <div class="container-fluid">
-            <h1 class="textshadow">Matthew Babel</h1>
-            <nav>
-                <ul class="desktop-nav">
-                    <li> <a class="textshadow" href="http://www.linkedin.com/in/matthew-babel"
-                            target="_blank">Linkedin</a></li>
-                    <li> <a class="textshadow" href="https://github.com/matthewBabel" target="_blank">Github</a></li>
-                    <li> <a class="textshadow" href="/about/">About</a></li>
-                    <li> <a class="textshadow" href="/contact/">Contact</a></li>
-                    <li> <a class="textshadow" href="/react/">More</a></li>
-                </ul>
-
-                <ul class="menu">
-                    <li class="logo textshadow"><b>Menu</b></li>
-                    <li class="item"> <a class="textshadow" href="http://www.linkedin.com/in/matthew-babel"
-                            target="_blank">Linkedin</a></li>
-                    <li class="item"> <a class="textshadow" href="https://github.com/matthewBabel"
-                            target="_blank">Github</a></li>
-                    <li class="item"> <a class="textshadow" href="/about/">About</a></li>
-                    <li class="item"> <a class="textshadow" href="/contact/">Contact</a></li>
-                    <li class="item"> <a class="textshadow" href="/react/">More</a></li>
-                    <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
-                </ul>
-            </nav>
+    <div id="home-section">
+        <video autoplay muted loop playsinline id="my-video">
+            <source src="/static/video/intro-background-3.mp4" type="video/mp4">
+        </video>
+        <div class="vert-center-text" id="typewriter-text">
         </div>
-    </header>
+        <div>
+            <a class="intro-button" href="javascript:#project-section" role="button">
+                <span>View my work</span>
+                <div class="icon">
+                    <i class="fa fa-caret-down"></i>
+                </div>
+            </a>
+        </div>
+    </div>
 
     <main class="site-content header-margin">
-        <div class="container">
-            <section>
-                <h1 id="intro" class="textshadow">I can program Android apps, desktop software, games and websites.</h1>
-                <h2 id="makeforyou">What can I make for <b><a id="underline"
-                            href="https://mattbabel.com/contact/">you?</a></b></h2>
-            </section>
-        </div>
-
-
-
-        <h1 class>My Projects</h1>
-
-        <div class="container-fluid">
-            <div class="row">
-
-                <div class="d-lg-none col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-md-10 offset-md-1">
-                    <div class="gameTextDishes">
-                        <h2>App - Dishes Need Packing</h2>
-                        <p>My first published product is a free-to-play Android app found on the Google Play Store. It
-                            is a fast-paced puzzle arcade style game. I've put a fun twist on a boring house hold chore,
-                            packing the dishwasher.</p>
-                        <p>It comes fully loaded with 100 levels, a custom game mode, and a backend server to store user
-                            highscores.</p>
-                        <h4>Find the App <a target="_blank"
-                                href="https://play.google.com/store/apps/details?id=garlicquasar.babel.matt.dishesneedpacking"
-                                id="underline">Here</a> on the Google Play Store</h4>
-                    </div>
-                </div>
-
-                <div class="col-xs-5 offset-xs-1 col-sm-5 offset-sm-1 col-md-5 offset-md-1 col-lg-2 offset-lg-0">
-                    <img src="/static/img/menu_shot.jpg" alt="Dishes Need Packing Menu Select">
-                </div>
-
-                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-2">
-                    <img src="/static/img/level_select.jpg" alt="Dishes Need Packing Level Select">
-                </div>
-
-                <div class="d-none d-lg-block col-lg-4">
-                    <div class="gameTextDishes">
-                        <h2>App - Dishes Need Packing</h2>
-                        <p>My first published product is a free-to-play Android app found on the Google Play Store. It
-                            is a fast-paced puzzle arcade style game. I've put a fun twist on a boring house hold chore,
-                            packing the dishwasher.</p>
-                        <p>It comes fully loaded with 100 levels, a custom game mode, and a backend server to store user
-                            highscores.</p>
-                        <h4>Find the App <a target="_blank"
-                                href="https://play.google.com/store/apps/details?id=garlicquasar.babel.matt.dishesneedpacking"
-                                id="underline">Here</a> on the Google Play Store</h4>
-                    </div>
-                </div>
-
-                <div class="col-xs-5 offset-xs-1 col-sm-5 offset-sm-1 col-md-5 offset-md-1 col-lg-2 offset-lg-0">
-                    <img id="rightAppImg" src="/static/img/gameplay_shot_2.jpg" alt="Dishes Need Packing Gameplay">
-                </div>
-
-                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-2">
-                    <div id="dishes_video">
-                        <video id="videoplayer" width="100%" height="500" controls>
-                            <source src="/static/video/dishes_need_packing_video.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-fluid">
-            <div class="row">
-
-                <div class="d-lg-none col-xs-12">
-                    <div class="textmargins">
-                        <h2>Video Game - The Lost Wand</h2>
-                        <p>Desktop Arcade Action-Survival game. My first developed game, although not published, is a
-                            great example of my creativity, passion, and experience in developing software from start to
-                            finish. The code was done in Java and artwork was done in Photoshop. As long as you have
-                            Java installed you can run this game.</p>
-                        <p>To use extract the file then click on TheLostWand.jar to play.</p>
-                        <h4>Download The Lost Wand for Free below</h4>
-
-                        <!-- download button -->
-                        <a href="/static/downloads/TheLostWand.zip" download="TheLostWand.zip">
-                            <button type="button" class="custombutton">
-                                Download
-                            </button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-lg-6">
-                    <img src="/static/img/GamePic1-min.png" alt="The Lost Wand Pic">
-                </div>
-
-                <div class="d-none d-lg-block col-xs-12 col-lg-5">
-                    <div>
-                        <h2>Video Game - The Lost Wand</h2>
-                        <p>Desktop Arcade Action-Survival game. My first developed game, although not published, is a
-                            great example of my creativity, passion, and experience in developing software from start to
-                            finish. The code was done in Java and artwork was done in Photoshop. As long as you have
-                            Java installed you can run this game.</p>
-                        <p>To use extract the file then click on TheLostWand.jar to play.</p>
-                        <h4>Download The Lost Wand for Free below</h4>
-
-                        <!-- download button -->
-                        <a href="/static/downloads/TheLostWand.zip" download="TheLostWand.zip">
-                            <button type="button" class="custombutton">
-                                Download
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-fluid">
-            <div class="row">
-
-                <div class="d-lg-none col-xs-12">
-                    <div class="textmargins">
-                        <h2>Software - Top 10 Artists of the Month</h2>
-                        <p>An application I made 6 years ago in my early days of programming. I created my own text-file
-                            based database to handle the data, it displays info and stats of a users top 10 favorite
-                            music artists or bands of each month. I'm still using this software today to track my
-                            favorite music, it has over 5 years of data stored.</p>
-                        <p>To use extract the file then click on PlaylistTracker.jar to play.</p>
-                        <h4>Download the software for Free below</h4>
-
-                        <!-- download button -->
-                        <a href="/static/downloads/ArtistsOfTheMonth.zip" download="ArtistsOfTheMonth.zip">
-                            <button type="button" class="custombutton">
-                                Download
-                            </button>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-lg-8">
-                    <div>
-                        <img src="/static/img/musicPicGraph.png" alt="Music Database Pic">
-                    </div>
-                </div>
-
-                <div class="d-none d-lg-block col-xs-12 col-lg-3">
-                    <div>
-                        <h2>Software - Top 10 Artists of the Month</h2>
-                        <p>An application I made 6 years ago in my early days of programming. I created my own text-file
-                            based database to handle the data, it displays info and stats of a users top 10 favorite
-                            music artists or bands of each month. I'm still using this software today to track my
-                            favorite music, it has over 5 years of data stored.</p>
-                        <p>To use extract the file then click on PlaylistTracker.jar to play.</p>
-                        <h4>Download the software for Free below</h4>
-
-                        <!-- download button -->
-                        <a href="/static/downloads/ArtistsOfTheMonth.zip" download="ArtistsOfTheMonth.zip">
-                            <button type="button" class="custombutton">
-                                Download
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="navbar"></div>
+        <div id="project-section"></div>
+        <div id="about-section"></div>
+        <div id="contact-section"></div>
     </main>
 
-    <footer>
-        <div class="container">
-            <p id="copyright">copyright&copy; 2020 Matthew Babel. All rights reserved</p>
-            <p id="contactInfo">Email: <a href="mailto:mattbabelwebsite@gmail.com">
-                    mattbabelwebsite@gmail.com</a></p>
-
-            <div id="icons" style="font-size: 24px;">
-                <a href="https://github.com/matthewBabel"><i class="fab fa-github"></i></a>
-                <a href="http://www.linkedin.com/in/matthew-babel"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.freelancer.com/u/mattbabel?w=f"><i class="fa fa-universal-access"></i></a>
-                <a href="/about/"><i class="fas fa-info-circle"></i></a>
-            </div>
-        </div>
-    </footer>
-
-
-
+    <div id="footer"></div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 
 </html>
 
-<script>
-    // set video volume to 50%
-    var vid = document.getElementById("videoplayer");
-    vid.volume = 0.5;
-</script>
