fixed a button, added lost wand video, pause videos when not in view

--- a/mattbabel.com/public_html/index.html
+++ b/mattbabel.com/public_html/index.html
@@ -13,6 +13,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <script src="/static/js/isinviewport/isInViewport.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -21,12 +23,14 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
+
     <script src="/static/js/load-common-html.js"></script>
     <script src="/static/js/typewriter-anim.js"></script>
     <script src="/static/js/scroll-listener.js"></script>
     <script src="/static/js/contact-submit.js"></script>
+    <script src="/static/js/video-pause.js"></script>    
 
-    <link rel="shortcut icon" href="favicon.ico" /> 
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="/static/scripts/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -44,7 +48,7 @@
         <div class="vert-center-text" id="typewriter-text">
         </div>
         <div>
-            <a class="intro-button" href="javascript:#project-section" role="button">
+            <a class="intro-button" href="#project-section" role="button">
                 <span>View my work</span>
                 <div class="icon">
                     <i class="fa fa-caret-down"></i>
@@ -61,8 +65,8 @@
     </main>
 
     <div id="footer"></div>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a>
+        from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 
 </html>
-
