--- a/static/html/about.html
+++ b/static/html/about.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <h1 class="hidden-top mb-4">About Me</h1>
     <div class="row">
-        <div class="col-xs-12 col-md-8">
+        <div class="col-xs-12 col-lg-8">
             <div class="aboutmeinfo hidden-left" id="borderId">
                 <div class="textmargins">
                     <h3>Overview</h3>
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-lg-4">
             <div class="aboutImg hidden-right">
                 <img src="/static/img/profile-pic.jpg" alt="Picture of me">
             </div>
