--- a/static/html/project.html
+++ b/static/html/project.html
@@ -54,8 +54,8 @@
         </div>
         
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-2 hidden-right">
-            <div id="dishes-video">
-                <video id="videoplayer" width="85%" height="auto" controls >
+            <div id="dishes-video" >
+                <video id="videoplayer" class="video-pause" width="85%" height="auto" controls >
                     <source src="/static/video/dishes_need_packing_video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
@@ -131,7 +131,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 hidden-left">
             <div id="wand-video">
-                <video id="videoplayerwand" width="90%" height="auto" controls >
+                <video id="videoplayerwand" class="video-pause" width="90%" height="auto" controls >
                     <source src="/static/video/the-lost-wand-video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
